bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:11: error: type mismatch;
 found   : Int
 required: Boolean
  return a
         ^