bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  var a:Int = n-100
  var b:Int = n-200
  /*if(Maths.abs(a)<10) {
    return true
  }
  if(Maths.abs(b)<10) {
    return true
  }
  return false*/
  return a
}